welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
inOrderEqual:2: error: not found: value equaOk
  if (equaOk==true){
      ^inOrderEqual:9: error: not found: value equaOk
  if (equaOk==false){
      ^